--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
@@ -74,6 +75,7 @@
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.20.6",
     "@types/body-parser": "^1.19.5",
+    "@types/react-helmet-async": "^1.0.1",
     "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1"
   }
